QS-1500: Add ranged multiple choices and refactor choices format

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -529,6 +529,18 @@ body #root .App .views .view.home-view {
       margin: 5px;
     }
   }
+
+  &.popup-detail {
+    padding-top: 100px;
+
+    .rc-slider {
+      width: 75%;
+      margin: auto;
+    }
+    .button-big {
+      margin-top: 100px;
+    }
+  }
 }
 
 // Default pixel ratio (1)
