QS-1500: Small style fix

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -536,6 +536,13 @@ body #root .App .views .view.home-view {
     .rc-slider {
       margin-bottom: 50px;
     }
+    .text-checkboxes {
+      padding: 0;
+    }
+
+    .button-big {
+      margin-top: 20px;
+    }
   }
 }
 
