QS-1500: Add last fields in home page and fix leisure view styles

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -415,6 +415,10 @@ body #root .App .views .view.home-view {
                 color: #fff;
               }
             }
+            &.small-width {
+              width: 30%;
+              margin: 3px;
+            }
           }
         }
       }
