--- a/src/scss/_partials/_tag-input.scss
+++ b/src/scss/_partials/_tag-input.scss
@@ -22,10 +22,10 @@
       color: #fff;
       width: 100%;
       font-size: 1em;
-      margin-bottom: 10px;
-      margin-top: 15px;
+      padding: 0;
+      margin: 0;
+      height: 58px;
       display: block;
-      padding: 10px 0;
       transition: all 0.3s cubic-bezier(.64, .09, .08, 1);
       background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $deep-purple 4%);
       background-position: -500px 0;
@@ -65,5 +65,9 @@
         padding-right: 5px;
       }
     }
+  }
+
+  &:after {
+    width: 0;
   }
 }
