--- a/src/scss/_partials/_questions_banner.scss
+++ b/src/scss/_partials/_questions_banner.scss
@@ -12,7 +12,7 @@ body #root .App .view {
       color: white;
 
       .answer-questions-link-title {
-        font-size: 1.428571429em;
+        font-size: 1.2em;
         font-weight: bold;
         height: 55px;
       }
@@ -39,6 +39,16 @@ body #root .App .view {
           -moz-border-radius: 50%;
           -webkit-border-radius: 50%;
           width: 90px;
+        }
+      }
+    }
+  }
+
+  @media only screen and (min-width: 350px) {
+    .answer-questions-link-container {
+      a {
+        .answer-questions-link-title {
+          font-size: 1.428571429em;
         }
       }
     }
