--- a/src/scss/pages/recommendations-other-questions.scss
+++ b/src/scss/pages/recommendations-other-questions.scss
@@ -28,11 +28,15 @@ body #root .App .view .page {
             -webkit-border-radius: 50%;
             display: block;
             float: right;
-            font-size: 10px;
-            height: 22px;
-            line-height: 24px;
+            height: 30px;
+            line-height: 30px;
             text-align: center;
-            width: 22px;
+            width: 30px;
+
+            .icon-edit:before {
+              font-size: 14px;
+              line-height: 30px;
+            }
           }
         }
         .answer-answered, .answer-not-answered {
