QS-1561: Add not answered other user questions with only question text. Delete other questions from store after answering any question for reloading other user answers.

--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -89,6 +89,20 @@ body #root .App .view .page.other-questions-page  {
           margin-top: 15px;
         }
       }
+      &.not-answered-questions-title {
+        font-size: 1.6em;
+
+        .description {
+          font-size: 0.7em;
+        }
+      }
+      &.not-answered {
+
+      }
+      .chip {
+        cursor: pointer;
+        margin: 20px 0;
+      }
     }
   }
 }
