--- a/src/js/components/ui/Banner/Banner.scss
+++ b/src/js/components/ui/Banner/Banner.scss
@@ -3,8 +3,9 @@
 	border-left: 3px solid #6C6F82;
 	border-radius: 0 10px 10px 0;
 	color: #6C6F82;
-	display: block;
+	display: inline-block;
 	font-size: 16px;
+	margin: 10px;
 	padding: 20px;
 
 	.text-wrapper {
