--- a/src/js/components/ui/Chip/Chip.scss
+++ b/src/js/components/ui/Chip/Chip.scss
@@ -6,6 +6,7 @@
   display: inline-block;
   height: 32px;
   line-height: 32px;
+  border: 2px solid #6C6F82;
   border-radius: 16px;
   -moz-border-radius: 16px;
   -webkit-border-radius: 16px;
@@ -20,7 +21,7 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  margin: 2px 0;
+  margin: 5px;
   max-width: 400px;
   font-size: 13px;
 
