--- a/src/js/components/ui/Frame/Frame.scss
+++ b/src/js/components/ui/Frame/Frame.scss
@@ -5,6 +5,8 @@
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   color: #6C6F82;
+  display: inline-block;
   font-size: 15px;
+  margin: 10px;
   padding: 10px;
 }
