--- a/src/js/components/ui/Banner/Banner.scss
+++ b/src/js/components/ui/Banner/Banner.scss
@@ -2,6 +2,8 @@
 	background-color: #E2E3E7;
 	border-left: 3px solid #6C6F82;
 	border-radius: 0 10px 10px 0;
+	-moz-border-radius: 0 10px 10px 0;
+	-webkit-border-radius: 0 10px 10px 0;
 	color: #6C6F82;
 	display: inline-block;
 	font-size: 16px;
