--- a/src/js/components/ui/IconNotification/IconNotification.scss
+++ b/src/js/components/ui/IconNotification/IconNotification.scss
@@ -2,16 +2,16 @@
 
 .icon-notification {
   cursor: pointer;
+  padding: 5px 0 0 0;
   position: relative;
-  height: 50px;
-  width: 60px;
+  height: 45px;
+  width: 50px;
 
   .icon {
     color: #6C6F82;
-    line-height: 40px;
-    margin-left: 5px;
-    padding: 5px;
-    height: 40px;
+    line-height: 50px;
+    text-align: center;
+    height: 50px;
     width: 40px;
 
     &::before {
@@ -27,7 +27,7 @@
     position: absolute;
     text-align: center;
     line-height: 25px;
-    top: 0;
+    top: 5px;
     right: 0;
     height: 25px;
     width: 25px;
