QS-1563: Add ProgressBar component

--- a/src/js/components/ui/RoundedImage/RoundedImage.scss
+++ b/src/js/components/ui/RoundedImage/RoundedImage.scss
@@ -4,6 +4,7 @@
   border-radius: 50%;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
+  display: inline-block;
   position: relative;
   overflow: hidden;
 
