--- a/src/js/components/ui/Frame/Frame.scss
+++ b/src/js/components/ui/Frame/Frame.scss
@@ -8,5 +8,26 @@
   display: inline-block;
   font-size: 15px;
   margin: 10px;
-  padding: 10px;
+  padding: 0;
+  max-width: 95%;
+
+  .title {
+    background: #E2E3E7;
+    border: 1px solid #E2E3E7;
+    border-radius: 10px 10px 0 0;
+    -moz-border-radius: 10px 10px 0 0;
+    -webkit-border-radius: 10px 10px 0 0;
+    color: #6C6F82;
+    height: 10px;
+    line-height: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .content {
+    padding: 10px;
+  }
 }
