QS-1563: Add CardUser and some fixes

--- a/src/js/components/ui/Frame/Frame.scss
+++ b/src/js/components/ui/Frame/Frame.scss
@@ -7,9 +7,9 @@
   color: #6C6F82;
   display: inline-block;
   font-size: 15px;
-  margin: 10px;
+  margin: 2.5%;
   padding: 0;
-  max-width: 95%;
+  width: 95%;
 
   .title {
     background: #E2E3E7;
