QS-1563: CardUser small css fix

--- a/src/js/components/OtherUser/CardUser/CardUser.scss
+++ b/src/js/components/OtherUser/CardUser/CardUser.scss
@@ -1,8 +1,8 @@
 .card-user {
   display: inline-block;
   font-weight: bold;
-  margin: 1%;
-  width: 48%;
+  margin: 0;
+  width: 50%;
 
   .user-image {
     text-align: center;
