QS-1563: Add new home page

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -1,3 +1,27 @@
+$white-background: #FBFCFD;
+$purple-main: #756EE5;
+$purple-secondary: #928BFF;
+$gray-main-text: #2B3857;
+$gray-secondary-text: #818FA1;
+$blue-projects: #63CAFF;
+$pink-hobbies: #D380D3;
+$green-experiences: #7BD47E;
+
+$overlay-top: rgba(43, 56, 87, 0);
+$overlay-bottom: rgba(43, 56, 87, 0.4);
+
+$facebook-blue: #3b5998;
+$twitter-blue: #55acee;
+$spotify-green: #82b919;
+$instagram-blue: #405de6;
+$google-red: #d34836;
+$youtube-red: #cd201f;
+$tumblr-blue: #35465c;
+$linkedin-blue: #0077b5;
+$steam-black: #000000;
+
+// TODO: Remove these colors;
+$facebook-blue-light: rgba(139,157,195, 0.5);
 $deep-purple: #6342b1;
 $deep-purple-translucent: rgba(99, 66, 177, 0.2);
 $dark-purple: #151232;
@@ -18,16 +42,6 @@ $pink: #8262a1;
 $flesh-colored: #d96484;
 $yellow: #adb32f;
 $orange-link: #dea72f;
-$facebook-blue: #3b5998;
-$facebook-blue-light: rgba(139,157,195, 0.5);
-$twitter-blue: #55acee;
-$spotify-green: #82b919;
-$instagram-blue: #405de6;
-$google-red: #d34836;
-$youtube-red: #cd201f;
-$tumblr-blue: #35465c;
-$linkedin-blue: #0077b5;
-$steam-black: #000000;
 $material-red: #F44336;
 $material-pink: #E91E63;
 $material-purple: #9C27B0;
