--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -3,6 +3,7 @@ $purple-main: #756EE5;
 $purple-secondary: #928BFF;
 $gray-main-text: #2B3857;
 $gray-secondary-text: #818FA1;
+$gray-border: #F0F1FA;
 $blue-projects: #63CAFF;
 $pink-hobbies: #D380D3;
 $green-experiences: #7BD47E;
