--- a/src/js/components/TopNavBar/TopNavBar.scss
+++ b/src/js/components/TopNavBar/TopNavBar.scss
@@ -10,6 +10,7 @@
   .icon {
     display: inline-block;
     margin-top: 15px;
+    margin-left: 8px;
   }
   .rounded-icon {
     display: inline-block;
