QS-1563: Last fixes for HomePage and AnswerUsernamePage

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -35,6 +35,10 @@ body #root .App .views .view.home-view {
             width: 100%;
           }
         }
+
+        h3 {
+          font-weight: normal;
+        }
       }
 
       .slick-dots {
