QS-1563: Add ErrorMessage component and use it on AnswerUsernamePage

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -7,6 +7,7 @@ $gray-border: #F0F1FA;
 $blue-projects: #63CAFF;
 $pink-hobbies: #D380D3;
 $green-experiences: #7BD47E;
+$red-error: #f42b54;
 
 $overlay-top: rgba(43, 56, 87, 0);
 $overlay-bottom: rgba(43, 56, 87, 0.4);
