QS-1563: Small fix for button component

--- a/src/js/components/ui/Button/Button.scss
+++ b/src/js/components/ui/Button/Button.scss
@@ -26,9 +26,12 @@
     min-width: 0;
     outline: none;
 
+    &:disabled, &:active {
+      opacity: 0.5;
+    }
+
     &:disabled {
       cursor: default;
-      opacity: 0.5;
     }
   }
 }
