QS-1563: Add StepsBar component

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -1,12 +1,16 @@
 $white-background: #FBFCFD;
 $purple-main: #756EE5;
+$purple-main-translucent: rgba(117, 110, 229, 0.2);;
 $purple-secondary: #928BFF;
 $gray-main-text: #2B3857;
 $gray-secondary-text: #818FA1;
 $gray-border: #F0F1FA;
 $blue-projects: #63CAFF;
+$blue-projects-translucent: rgba(99, 202, 255, 0.2);
 $pink-hobbies: #D380D3;
+$pink-hobbies-translucent: rgba(211, 128, 211, 0.2);
 $green-experiences: #7BD47E;
+$green-experiences-translucent: rgba(123, 212, 126, 0.2);
 $red-error: #f42b54;
 
 $overlay-top: rgba(43, 56, 87, 0);
