--- a/src/js/components/ui/StepsBar/StepsBar.scss
+++ b/src/js/components/ui/StepsBar/StepsBar.scss
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     color: $white-background;
     cursor: pointer;
+    font-weight: 600;
     height: 48px;
     position: absolute;
     bottom: 0;
@@ -65,6 +66,7 @@
       text-align: right;
     }
     .cant-continue {
+      font-weight: normal;
       text-align: center;
     }
 
