--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -31,8 +31,11 @@ body #root .App .views .view.home-view {
         text-align: center;
 
         .login-image {
+          margin-top: 24px;
+          text-align: center;
           img {
-            width: 100%;
+            margin: auto;
+            width: 75%;
           }
         }
 
