QS-1563: Add Professional ProfileIndustryPage and some fixes

--- a/src/js/components/ui/Chip/Chip.scss
+++ b/src/js/components/ui/Chip/Chip.scss
@@ -23,7 +23,7 @@
   -webkit-align-items: center;
   align-items: center;
   margin: 5px;
-  max-width: 400px;
+  max-width: 90%;
 
   &.selected {
     background: $purple-main;
